# clickmaster-crawler-v2

./: .env.example  .gitignore  LICENSE  README.md  main.py  naksi_king.py  pyproject.toml  requirements.txt
.cursor/rules/: crawling-logic.mdc  database-schema.mdc  github-workflows.mdc  global-rules.mdc  implementation-status.mdc  keywords-config.mdc  openai-batch-logic.mdc  openai-batch.mdc  project-overview.mdc  supabase-operations.mdc  workflow-scripts.mdc
.github/workflows/: batch-processor.yml  daily-crawler.yml  daily-news-crawl.yml  hourly-batch-monitor.yml
logs/: .gitkeep
scripts/: README.md  crawl_news.py  deduplicate_articles.py  monitor_batches.py  openai_batch_monitor.py  process_completed_batches.py  process_naksi_king.py  sync_journalist_stats.py
src/: __init__.py
src/config/: keywords.py  prompts.py  settings.py
src/core/: __init__.py  batch_processor.py  bulk_updater.py  openai_batch.py  openai_client.py  prompt_generator.py
src/crawlers/: naver_crawler.py
src/database/: operations.py  supabase_client.py
src/models/: article.py  base.py  batch_status.py
src/utils/: date_utils.py  file_utils.py  keywords.py  logging_utils.py  text_utils.py
tests/: test_batch_processor.py  test_crawler.py  test_database.py  test_models.py
